--- a/Independent/config.properties
+++ b/Independent/config.properties
@@ -1,5 +1,5 @@
 hubs=Hub
-queues=Practice,HCFactions,KitMap,KitPvP,SkyWars,PrisonOP
+queues=Practice,HCFactions,PrisonOP,DestroyTheNexus,Cubecore
 redis-host=127.0.0.1
 redis-port=6379
 redis-password=
